# Tryora

./: .gitignore  Context.md  Features_FR_NFR.md  IMPLEMENTATION_COMPLETE.md  NFR_Template.md  README.md  Requirements_Traceability_Matrix.md  SRS_Fashion_TryOn_Platform.md  SRS_Quick_Reference.md  SRS_Review_Checklist.md  SUPABASE_UPLOADER_SUMMARY.md  SytemDesign-1.md  TODO.md  User_Stories_Template.md  apiGateaway.md  context.md  docker-compose.override.yml  docker-compose.yml  local.sh  package-lock.json  package.json  shcema.md  ssr.md  systemDesign-2.md  systemDesign.md  workflow.md
ai-server/: .dockerignore  .env.example  .gitignore  Context.md  Dockerfile  MIGRATION.md  README.md  context.md  fileStracture.md  prisma.config.js  pyproject.toml  requirements.txt  tes.md  test.py  todo.md
ai-server/.claude/: Claude.md
ai-server/app/: README.md  firstEmbedding.json  main.py
ai-server/app/LLM/: README.md  __init__.py  openapi.py  parser.py
ai-server/app/api/: README.md  admin.py  deps.py  health.py  profile.py  router.py  templates.py  try_on.py  uploads.py
ai-server/app/config/: README.md  constants.py  logging.py  settings.py
ai-server/app/core/: README.md  config.py  logger.py
ai-server/app/db/: README.md  (+4 more)
ai-server/assets/: README.md
ai-server/docker/: README.md  app.Dockerfile
ai-server/prisma/: README.md  schema.prisma
ai-server/scripts/: README.md  activ.sh  dev_start.sh  reqgen.sh  seed_templates.py  start.sh  stop.sh  test.sh  warm_cache.py
ai-server/tests/: README.md  conftest.py  test_api.py  test_dress_search.py  test_search_service.py
(+708 files in other folders)
