[project]
name = "ai-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "apify-client>=2.5.0",
    "chromadb>=1.5.1",
    "fastapi[standard]>=0.129.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "openai>=2.24.0",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "sqlmodel>=0.0.35",
]
