[project]
name = "ai-server"
version = "0.1.0"
description = "tryora ai server"
readme = "README.md"
requires-python = ">=3.11, <3.13" 
dependencies = [
    "alembic>=1.18.4",
    "apify-client>=2.5.0",
    "beautifulsoup4>=4.12.0",
    "celery[redis]>=5.6.2",
    "chromadb>=1.5.1",
    "crewai[tools]>=0.95.0",
    "fastapi[standard]>=0.129.0",
    "httpx>=0.28.1",
    "lxml>=5.2.0",
    "loguru>=0.7.3",
    "openai>=2.24.0",
    "prisma>=0.15.0",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "redis>=5.0.0",
    "sqlmodel>=0.0.35",
    "xai-sdk>=1.8.0",
    "trimesh>=4.11.3",
    "numpy>=2.4.3",
    "scipy>=1.17.1",
    "pillow>=12.1.1",
    "pygltflib>=1.16.5",
    "pyrender>=0.1.45",
    "smplx>=0.1.28",
    "xatlas>=0.0.11",
]
